--- a/.prettierrc
+++ b/.prettierrc
@@ -3,6 +3,5 @@
     "bracketSpacing": true,
     "trailingComma": "es5",
     "tabWidth": 2,
-    "semi": true,
-    "useTabs": false
+    "semi": true
 }
