--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "prettier": "^3.6.2"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.7",
+    "cros": "^1.1.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "mongoose": "^8.16.5"
